--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 /Prog1/Inlamningsuppgift/nbproject/private/
 /Prog1/Inlamningsuppgift/build/
 /Prog1/Classes/nbproject/private/
+/Prog1/BubbleSort/nbproject/private/
+/Prog1/SortAndSearch/nbproject/private/
+/Prog1/SortAndSearch/build/
+/Prog1/Slutprojekt/nbproject/private/
+/Prog1/Maths/nbproject/private/
